--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -118,7 +118,7 @@
 　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、アンドロイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
 　人工チューブラルが形作る大規模ニューラルネットはあまりにも複雑だ。あの表情を再現する出力信号は容易に作り出せるのかもしれないが、その背後にある心理作用を厳密に解析することは不可能に近い。
 　だからあの日、ハルカが何を考え、何を感じていたのかは、もはや誰にも分かりはしない。分かりはしないが、想像し、祈ることくらいはできるだろう。
-――願わくば彼女が安らかな心持ちで眠りにつきしことを。
+――願わくば彼女が安らかな心持ちで眠りにつかんことを。
 　普段は神仏など信じない東だが、このときばかりはそう祈らずにはいられなかった。
 　その後、数日の時を経てハルカの廃棄が決定した。
 　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>(</rp><rt>ひとふさ</rt><rp>)</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
