--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -40,7 +40,7 @@
 「でも希海さん、あそこに通うつもりで、ここまで来たんじゃないんですか？」
 　料理教室を見に来たなんて言っただろうか。世間一般の常識には疎いくせして、リコはこういう勘だけやたらと鋭い。
 「違うって。ほら、ああいうところって結構お金かかるしね。安かったら行ってもいいかなって思うけど、あの様子じゃ結構いい値段するわよ」
-　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの2階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。開放前に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
+　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの2階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。西日本時代に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
 「今日もいい天気ですね」
 　空を見上げて嬉しそうにリコが言った。
 　その言葉につられて希海も上空に視線を移してみる。どこまでも続いているかのような真っ青な空に、真新しい飛行機雲が帯を引いていた。6月も末となれば空の表情はすっかり夏のそれだ。最近できた家電量販店の向こうでは、山のような大きさにまで成長した積乱雲がこちらをのぞき込んでいる。
@@ -55,11 +55,11 @@
 「あれ、わかりません？　こう、もわもわしてるというか……」
 「…………まあいいや。暑いからさっさと中入ろ？」
 　広場の反対側にある階段を登れば、本屋の入り口はすぐそこだった。扉をくぐると本棚いっぱいの背表紙が視界に広がり、ひんやりとした空気と、かすかなインクの香りがふたりを包み込む。
-「やっぱ本屋はいいわねえ。さあて、レシピ本はどこかなっと」
+「うーん。やっぱ本屋はいいわねえ。さあて、レシピ本はどこかなっと」
 　比較的大型の書店だ。目的の本を探すだけでも一手間かかるだろう。
 「あ、そういやあんた欲しい本とかある？」
 「私ですか？」
-「うん。部屋の本なんて読んでも面白くないでしょ？　私は自分の目当てのもの探してるからさ。その間に色々見てきなよ」
+「部屋の本なんて読んでも面白くないでしょ？　私は自分の目当てのもの探してるからさ。その間に色々見てきなよ」
 　希海がゲームやネットをしている最中にちらりと横を窺ってみると、そこにはいつでも本を開いて眉間に皺を寄せているリコの姿があった。無理もない。希海が所有している本はそのほとんどが新書か青年向けのコミックである。想定年齢15歳の女の子が読むにはいささか酷だろう。それに希海は普段からリコそっちのけでゲームをしているのだ。本くらい彼女が読みたい物を読ませてやらないと後ろめたさでプレイに集中できない。
 「いいんですか？」
 「いいっていいって。あんたはそんなこと気にしないの」
@@ -67,11 +67,11 @@
 （…………何買うつもりよ）
 　高価な図鑑とかねだられたらどうしようかと、不安になる。
 「じゃ、私の探してるのはたぶんこっちだから。気に入った本があれば、適当に私のところまで持って来て。あ、それと私と落ち合うまでは勝手に本屋の外へ出ないこと。迷子になったら困るからね」
-　フロアを適当にうろついていると、探し物はすぐに見つかった。希海はさっさと会計を済ませると、リコを探してフロアをうろつき回る。
-　整然と立ち並ぶ壁のような本棚とそこに鎮座する多種多様な本たち。ある者は人目を引くタイトルと装丁で自らの存在を声高に主張し、またある者は同じ姿形をした仲間と共に群れの力を誇示している。まるで熱帯雨林のような本の樹海。そのさなかにぽつんと、一人の女の子が立っていた。
-　A5サイズの本を開けたリコは、その中に広がる世界を必死に目で追っている。
+　リコと別れ、フロアを適当に歩いていると探し物はすぐに見つかった。希海はさっさと会計を済ませると、リコを探して再びフロアをうろつき回る。
+　整然と立ち並ぶ壁のような本棚とそこに鎮座する多種多様な本たち。ある者は人目を引くタイトルと装丁で自らの存在を声高に主張し、またある者は同じ姿形をした仲間と共に群れの力を誇示している。まるで熱帯雨林のような本の樹海。そのさなかにぽつんと一人の女の子が立っていた。
+　本棚の谷間に立ち尽くし、紙の中に広がる世界を必至に目で追うリコ。その手に持たれた本は普通の本より少し大きめであり、遠目に見てA5サイズといったところだろうか。
 　何を読んでいるのだろう、と希海は思った。活字にしてはページをめくるのが速すぎるし、漫画にしては遅すぎる。足音を殺して忍び寄ってみると、自分でも驚くほど簡単に背後まで歩を進めることができた。希海の存在に気づいていないリコは、無防備な背中を晒して手元の本に食い入ったままだ。しばし呼吸をやめ、背伸びをして本の内容を覗いてみる。
-　微動だにしない細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>(</rp><rt>わたげ</rt><rp>)</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
+　小さく呼吸を繰り返す細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>(</rp><rt>わたげ</rt><rp>)</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
 「写真集？」
 　突然の呼びかけにリコがわっ、と驚きの声を上げて振り返る。
 「もうっ、びっくりさせないでくださいよ」
@@ -98,7 +98,7 @@
 「嫌ですよーだ。もう頼まれたってやりません」
 「まあまあそう言わずに。はい巻戻し」
 「そんな機能ありませんからっ！」
-　慣れてきたのはリコの方だけでない。最初の1週間は気まずさを覚えることもあったが、今やこうして冗談を言い合えるくらい、希海の中でリコの存在が自然なものになっている。
+　慣れてきたのはリコの方だけでない。最初の1週間ほどは気まずさを覚えることも多々あったが、今やこうして冗談を言い合えるくらい、希海の中でリコの存在が自然なものになっている。
 　本の樹海にふたり分の笑い声が小さく響いた。
 　一人ぼっちの六畳一間で1年を過ごしてきた希海にとって、リコは数年ぶりにできた友達だ。沈黙を気にしなくてもいい相手。考えながら会話をする必要もない相手。希海には、それがたまらなく嬉しかった。
 「そうだ、じゃあお詫びにさ……行ってみない？」
@@ -117,11 +117,11 @@
 「はいっ！」
 「じゃあそういうことだから、ちゃっちゃとその本買っちゃお？」
 「はいっ！　……あっ、でもこれはいいです」
-　リコはいそいそと写真集を本棚に戻した。
+　リコはそう言っていそいそと写真集を本棚に戻す。
 「あれ？　あんたその本が欲しいんじゃなかったの？」
-「これはちょっと見てただけですよ。買ってもらう本はもう決まってます」
+「これはちょっと見てただけですから。買ってもらう本はもう決まってます」
 　本屋を出た後もふたりは地区センターを歩き回って買い物を続けた。もともと予定はしていなかったものの、リコの夏服を買ったり、電器屋で扇風機を品定めしたり、喫茶店でのんびり過ごしたりしていると、あっという間に数時間が経ってしまう。
-　帰りのバスを降りると、辺りはすっかり夕暮れの喧騒に包まれていた。遠くに聞こえる車の音や風呂場の水音。戸建住宅の軒先には夕飯の匂いが漂っており、時折テレビの音が通りに漏れ出ている。東の空からはインディゴの夜が時々刻々と染み出してきており、アパートの階段からは小さく光る一番星が見えた。
+　帰りのバスを降りると、辺りはすっかり夕暮れの喧騒に包まれていた。遠くに聞こえる車のエンジン音や風呂場の水音。戸建住宅の軒先には夕飯の匂いが漂っており、時折テレビの音が通りに漏れ出ている。東の空からはインディゴの夜が時々刻々と染み出してきており、アパートの階段からは小さく光る一番星が見えた。
 「ああ、<ruby>疲<rp>(</rp><rt>つっか</rt><rp>)</rp></ruby>れたぁ」
 　扉を開けるやいなや、希海は靴を脱ぎっぱなしにして部屋に飛び込む。慣れた場所に帰ってくると、体中の緊張が一気にほどけてゆく気がした。
 「今日は色んなところ行きましたからね」
@@ -145,7 +145,7 @@
 「あっ！　そうだ私も」
 　希海の様子をじっと見ていたリコが不意に声を上げた。机の上に置いた本屋のビニール袋を手に取り、がさごそと中身を取り出す。
 「えへへー。さっそく書きますよっ」
-　リコの両手には小さな日記帳があった。可愛らしいキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。15歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
+　リコの両手には小さな日記帳があった。子供向けアニメのキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。15歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
 「あっ、何か書くものあります？」
 「シャーペンでいい？」
 　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ1台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>(</rp><rt>たぐい</rt><rp>)</rp></ruby>だって今は綺麗に本棚に収められている。
@@ -160,7 +160,7 @@
 　少し前から途切れがちに響いている小さな音。机に向かったリコが必死にペンを動かす音だ。
 （何書いてんのかな……）
 　物言わぬリコの背中を見つめていると、不意に、その姿が本屋での光景に重なった。希海は『よし』と決意し、ゆっくりと音を立てないように腰を上げると、そのまま一歩だけ前に出る。
-　ちょうどいい。リコが何を書いているか、せっかくだから覗き見てやろうではないか。あのときはスニーカー、今は靴下。単純に履物だけを比較するなら今回の方が簡単なミッションだと言える。だが、今度の場合はなにぶん場所が悪い。他に音源の無い閉めきった部屋では、靴下が床を擦る音ですら容易にリコの耳に届いてしまう可能性があった。
+　ちょうどいい。リコが何を書いているか、せっかくだから覗き見てやろうではないか。あのときはスニーカー、今は靴下。単純に履物だけを比較するなら今回の方が簡単なミッションだと言える。だが、今度の場合はなにぶん場所が悪い。他に音源の無い閉めきった部屋では、靴下が床を擦る音ですら容易にリコの耳に届きかねない。
 　希海は息を止めて一歩だけ足を動かし、ゆっくりと息を吐き出す。数秒をかけて肺の中の空気を出し終えると、また数秒をかけて同じように息を吸い込んだ。その場に留まって呼吸を整える。吸って吐いてを二、三回も繰り返しながら、希海は次なる一歩を頭の中でシミュレートする。六畳一間の狭い部屋だ。あと数歩も進めば、すぐにでも日記帳を覗き込める位置にたどり着くことができるだろう。そう思いながらさらなる一歩を踏み出したそのとき。
 「……？」
 　突然、日記帳と向き合っていたリコが振り返った。しまった、と後悔するも時すでに遅し。自身の影がリコの手元に差し込んでしまっていた。
