ルビの修正

--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -31,7 +31,7 @@
 （ま、でもそんなに一度にやらなくていっか）
 　せっかく早起きができて、生活リズムがもとに戻ったのだ。あれもこれもと一度に色んなことをやってヘトヘトになったらいけない。最近は少し疲れると平気で10時間以上寝てしまう。そうなったら昨日までの昼夜逆転生活に逆戻りだ。ここは、仕事を1日ひとつに限定して、生活リズムの維持に努めた方が懸命かもしれない。
 「じゃあ今日はとりあえず、食料品かな」
-　乾燥機の中から適当にタオルを取り出す。そこには、かすれた『<span class="simplified">党立<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>高校</span>』の文字。高校の入学式でもらったものだ。タオルで濡れた顔を拭き、化粧水を肌になじませると、一層気分が引き締まる気がした。
+　乾燥機の中から適当にタオルを取り出す。そこには、かすれた『<span class="simplified"><ruby>劳动党立真揺高校<rp>(</rp><rt>ろうどうとうりつまゆらぎこうこう</rt><rp>)</rp></ruby></span>』の文字。高校の入学式でもらったものだ。タオルで濡れた顔を拭き、化粧水を肌になじませると、一層気分が引き締まる気がした。
 「ちょっと頑張ってみよっかな」
 　鏡に写る自分の姿に向かってつぶやく。もはや見慣れた自分の顔。生まれつきのくせっ毛には派手な寝癖が付いていた。
 　そうとも、今日が新しい自分の始まりになるかもしれないのだ。規則正しい生活が大切、健全な精神は健全な生活習慣から。多くの人がそう言っているではないか。今日みたいに毎朝早く起き、朝日を浴びて朝食をきちんと摂り、日中は積極的に体を動かし、夜は早めに寝る。そんな生活を続けていれば、いつかは自分もちゃんと学校に行けるようになるのかもしれない。
