細かい修正

--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -73,8 +73,8 @@
 「高いところ……？　あっ」
 　ようやく先ほどの出来事を思い出したのだろうか。虹を閉じ込めた瞳が、みるみると困惑の色に染まっていく。
 「ああああっ！　すっ、すいませんすいません！」
-　見ているこっちが申し訳なくなるような絵に描いた平謝りだった。それよりもまず自分の上からどいてほしい……。希海はうんざりとした様子でアスファルトの路面に頭をあずけた。
-　見慣れた街の夕暮れが普段よりもずっと広い視野角を持って希海の網膜に投影される。オレンジから紺色に変わるグラデーションの空。夕日に照らされ濃い陰影を刻む綿雲。視界の隅では電柱と戸建住宅がそびえ立ち、何本もの電力線と通信ケーブルがまるで蔓草のようにそれらの間を横切っていた。
+　見ているこっちが申し訳なくなるような絵に描いた平謝りだった。それよりもまず自分の上からどいてほしい……。
+　うんざりしてアスファルトの路面に頭をあずけると、見慣れた街の夕暮れが普段よりもずっと広い視野角を持って網膜に投影される。オレンジから紺色に変わるグラデーションの空。夕日に照らされ濃い陰影を刻む綿雲。視界の隅では電柱と戸建住宅がそびえ立ち、何本もの電力線と通信ケーブルがまるで蔓草のようにそれらの間を横切っていた。
 （何年ぶりかな……。こうして地面に寝っ転がるの）
 　眼前に広がる空は人工物に切り取られてなお、驚くほどに大きかった。
 </div>
