--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -20,7 +20,7 @@
 「…………」
 　行き交う人々の往来を背に、リコはガラスの向こう側を物珍しそうに眺めている。
 「うーん」
-　希海が唸った。
+　腕を組んだままの希海が唸った。
 　ウィンドウ越しに見える内装は白を基調とした清潔感あふれる広々としたレイアウト。暖色系の間接照明がいくつもの調理台を照らしており、その周りではエプロン姿の女性たちが料理を作りながら楽しそうに談笑をしていた。
 （これはちょっと敷居が高いかなあ）
 　料理教室、と思い立ってここまで来てみたはいいものの、現場を目の前にするとつい二の足を踏んでしまう。
