--- a/hardproblem/2-04.html
+++ b/hardproblem/2-04.html
@@ -28,7 +28,7 @@
 「どわっ！」
 　突然の大声に周りの海水浴客が振り返る。希海は思わず尻餅を付いてしまっていた。
 「えへへー。意外とすばしっこかったんで捕まえるのに苦労しちゃいました」
-　まるで子猫を捕まえたときのような口調である。だがその手中では猫からは程遠い外観をした、見るもおぞましい7対の節足が<ruby>蠢<rp>(</rp><rt>うごめ</rt><rp>)</rp></ruby>いていた。キチガイに刃物。そんな言葉が頭をよぎる。手にした物体の意味をまるで理解していない無邪気な笑顔に希海は凍りついた。
+　まるで子猫を捕まえたときのような口調だった。だがその手中で<ruby>蠢<rp>(</rp><rt>うごめ</rt><rp>)</rp></ruby>くのは、猫とは程遠い外観をした見るもおぞましい7対の節足。手にした物体の意味をまるで理解していない無邪気な笑顔に希海は凍りつく。キチガイに刃物。そんな言葉が頭をよぎった。
 「どうしたんですか？　ほら、よく見てくださいよ」
 「ちょっと、やっやめ、」
 　あまりの恐怖で上手く声が出せない。肺に溜まった空気はだらしなく口から漏れ出ていく一方で、一向に喉を震わすことができずにいる。立ち上がって逃げようにも足に力が入らなかった。そんな希海の恐怖を知ってか知らずか、フナムシを手にしたリコは悪魔のように幼い笑顔でこちらへにじり寄ってくる。
@@ -46,26 +46,27 @@
 「はぁ…………。とにかく、これからは変な虫に触らないこと。分かった？」
 「は、はい。わかりました」
 「分かればよし。ところで喉乾かない？　泳ぐ前に何か飲みたいな」
-　さんざん喋ったせいか喉がカラカラだ。脱衣所からここへ来る途中に売店があったのを希海は思い出す。
-「そうだ。希海さん、せっかくですから海の水飲んでみましょうよ」
+　さんざん喋ったせいか喉がカラカラだった。だが周囲を見渡してみても自販機の類は見当たらない。
+「あ、そういえば向こうに売店が――」
+「そうだ。希海さん、せっかくですから海の水飲んでみましょうよ！」
 「おい」
 　リコはたまに、こういうとんでもない世間知らずを発揮することがある。秋田犬を見てキツネだと言ったり、キャッシュカードとクレジットカードの区別がついていなかったり。初期記憶に電子学習由来の情報成分が多く含まれていることがその原因らしいのだが、詳しい話を知らない希海はただただ呆れるばかりである。
 「えっとねリコ。海の水って飲めないのよ」
 「あっ、そうか。消毒されてませんもんね」
 「おい」
-　少しの間、海をお預けにして売店へ向かった。台風が来れば吹き飛んでしまいそうな古びた小屋と、ペンキで殴り書きしたメニューの看板がいかにもといった感じである。
-「あーしまった。いま昼時か」
-　ちょうど昼時なのもあってか、小屋の前には長蛇の列ができていた。もちろん大人しく並んでも良いのだが……。
+　そんな会話の後、少しの間海をお預けにして売店へ向かった。台風が来れば吹き飛んでしまいそうな古びた小屋と、ペンキで殴り書きしたメニューの看板。
+「あーしまった。いまそんな時間か」
+　ちょうど昼時なのもあってか、絵に描いたような海の家には長蛇の列ができていた。この調子だと軽く10分は待たされそうである。もちろん大人しく並んでも良いのだが……。
 「リコ、並んどいてよ。その間に場所取ってくるから」
 「えっ！　わ、私ですか？」
-「大丈夫だって。いつも買い物してる近隣センターと同じよ。欲しい物言ってお金払えばいいだけ。はいお金」
-　希海は小銭入れを開き、中から取り出した千円札をリコに差し出す。
+「大丈夫だって。いつも買い物してる近隣センターと同じよ。欲しい物言って代金払えばいいだけ。はいお金」
+　希海は小銭入れを開き、中から取り出した千円札を強引にリコへ押し付けた。
 「わっ、わかりました！　頑張ります！」
-　小さく折りたたまれた紙幣を受け取ったリコは、少し緊張したような表情を浮かべていた。たかが売店の買い物程度に、そこまで気合を入れなくてもいいのに。希海は内心苦笑いをする。
-「じゃあよろしくね。あんたも食べたいものあったら勝手に買ってくれていいわよ。私は……かき氷。練乳で」
+　小さく折りたたまれた紙幣を受け取ったリコは、少し緊張したような表情を浮かべていた。たかが売店の買い物程度に、そこまで気合を入れなくてもいいのにと希海は思う。
+「じゃあよろしくね。あんたも食べたいものあったら勝手に買ってくれていいわよ。私は……かき氷。ブルーハワイで」
 「了解ですっ！」
 　元気よく返事を返したリコと別れ、希海は一人ビーチに戻った。
-　適当によさそうな場所を見繕ってパラソルを設置し、その下に折りたたみの椅子を広げる。これで準備完了だ。炎天下の作業に汗が噴き出たが、日陰に腰を落ち着ける頃になると涼しげな海風が吹き始めていた。
+　適当によさそうな場所を見繕ってパラソルを設置し、その下に折りたたみの椅子を広げる。これで準備完了だ。炎天下の作業に汗が噴き出たが、日陰に腰を落ち着ける頃になると涼しげな海風がそよぎ始めていた。
 「いい天気ねえ……」
 　希海はしばらくの間、眼前の青い海をぼんやりと眺めて過ごした。
 　海の上では小さな雲が仲間からはぐれてしまったかのように、ぽつんと立ちすくんでいる。かろうじて目で追えるくらいの速さで、ゆっくりと形を変えていく積乱雲。その様子を見ていると、まるで自分が空を飛んでいるかのように、たやすく上空の風をイメージすることができた。
@@ -89,32 +90,32 @@
 　水着姿の女の子が微笑みかける。朗らかで人当たりの良さそうな笑顔。遠まわしな質問が希海の胸に突き刺さった。
 「た、竹見さんも……遊びに来たんだ……」
 「学会がこの近くであるからって、一足先に研究室のみんなとね。ほかの人達も向こうにいるよ？」
-　――ほかの人達。
+――ほかの人達。
 　その単語が、久しく忘れていた顔を希海の脳裏に呼び起こす。
-　かつての同期、今や先輩になってしまった人達。ゼミをすっぽかして迷惑をかけた、明るくて人気者の男の子。友達になろうと話しかけてくれたけれど、もう1年以上会っていない女の子。隣の席の気難しそうな男の子から借りた教科書は、まだ開いてすらいない。
+　かつての同期、今や先輩になってしまった人達。ゼミをすっぽかして迷惑をかけた、明るくて人気者の男の子。友達になろうと話しかけてくれたけれど、もう1年以上会っていない先輩。隣の席の気難しそうな男の子から借りた教科書は、まだ開いてすらいない。
 「そ、そう……。そうなん……だ……ははっ……」
 　ひときわ大きな波が打ち寄せ、大きな歓声が上がった。
 　目の前の相手を直視することができない。希海は手のひらに爪を食い込ませながら、俯きがちにぎこちない笑みを浮かべる。注意を切らすと、今にも膝が震えだしそうだった。
 「今日は一人で来てるの？　もし良かったら――」
 「ご、ごめん！　人待たせてるから！」
 　耐えきれずに走りだした。
-　呼び止める声が背中越しに聞こえたが、希海には振り返ることなどできなかった。シュノーケルも浮き輪も折りたたみの椅子も、すべてを放り出してただひたすらに人の波を掻き分けていく。砂浜の上に捨てられた紙皿を踏み潰す。談笑する家族の間を一目散に駆け抜ける。人とすれ違うたびに奇異の目で見られ、肩がぶつかるたびに誰かに舌打ちをされた。行く当てなんてありやしない。
+　背中越しに呼び止める声が聞こえたが、希海には振り返ることなどできなかった。シュノーケルも浮き輪も折りたたみの椅子も、すべてを放り出してただひたすらに人の波を掻き分けていく。砂浜の上に捨てられた紙皿を踏み潰す。談笑する家族の間を一目散に駆け抜ける。人とすれ違うたびに奇異の目で見られ、肩がぶつかるたびに誰かに舌打ちをされた。行く当てなんてありやしない。
 　ただ、少しでも遠くへ行きたかった。
 　一刻も早くこの太陽の下から逃げ出したかった。
-　
+
 　どれくらい走っただろう。
-　息が上がりはじめる頃になると、周囲のひと気は既に途絶えていた。たどり着いたのは断崖に建つホテルの影が差し込む、薄暗いビーチの端。希海はひときわ大きな岩の陰に隠れると、そのまま倒れこむようにして膝を折った。両手を突いて肩を上下させると、視界がみるみる涙で滲んでいく。必死に呼吸を整えようとするが一向に上手くいかない。こみ上げる嗚咽がうめき声となって口からこぼれ落ちていった。
+　息が上がりはじめる頃になると、周囲のひと気は既に途絶えていた。たどり着いたのは断崖に建つリゾートホテルの影が差し込む、薄暗いビーチの端。希海はひときわ大きな岩の陰に隠れると、そのまま倒れこむようにして膝を折った。両手を突いて肩を上下させると、視界がみるみる涙で滲んでいく。必死に呼吸を整えようとするが一向に上手くいかない。こみ上げる嗚咽がうめき声となって口からこぼれ落ちていった。
 「どうして……」
 　どうしてこうなってしまったのだろう。
 　自分はただ忘れたかっただけなのに。いつか訪れる未来を忘れたかっただけなのに。それなのに、どうしてこんな理不尽に襲われるのだろう。どうしてこんな形で現実を突き付けられなければならないのだろう。
 　大粒の雫がぼろぼろと希海の頬をつたった。
 　いや、分かっている。いつだって悪いのは自分だ。問題を先送りにしたツケが、こうやって明白な形で現れたのだ。竹見さんは何も悪くない。大学の人達だって
-　――ほかの人達も向こうにいるよ？
+――ほかの人達も向こうにいるよ？
 　強烈な吐き気に襲われた。横隔膜が激しく痙攣し、酸の味が喉の奥に広がる。希海は口を押さえ胃液の逆流を必死にこらえた。
 　彼女は、自分のことを他の者に話すのだろうか。それを聞いた人達は、一体どんな顔をするのだろうか。
-『青山が脳天気に海で遊んでたらしいよ』
-『まったく何を考えているんだろうね。自分たちの気も知らないで』
-『竹見が声掛けたら泣いて逃げたらしいじゃん』
+『聞いた？　青山が脳天気に海で遊んでたんだって』
+『まったく何を考えているんだろうな。自分たちの気も知らないで』
+『竹見が声掛けたら泣いて逃げたらしい』
 『ああいう世の中舐めた奴は一度痛い目みればいいんだって。自業自得だよ』
 　想像するだけで背筋が寒くなる光景が脳裏に広がり、そのたびに希海は激しく咳き込んだ。顎から伝ったよだれが糸を引き、こぼれる涙が足元の砂を小さく湿らせていく。
 　もう嫌だった。
@@ -123,8 +124,8 @@
 　不意に、誰かが砂を踏みしめる音がした。
 　その音はまるで気配を消そうとしているかのように、一歩一歩ゆっくりとこちらへ向かってくる。数歩進むと足音はほどなくして止まり、岩場はふたたび波の音に支配された。
 　何度も何度も、岩にあたっては砕け散る波のリズム。足音の主は、まるで何かを<ruby>躊躇<rp>(</rp><rt>ためら</rt><rp>)</rp></ruby>っているかのように、その場に止まったまま一向に動き出そうとしない。
-「探しましたよ」
-　背後から小さな声がした。少しばかりの幼さが残る、もうすっかり聞き慣れてしまった声。だがそこに、いつもの無邪気さは見られない。
+「……探しましたよ」
+　小さな声がした。少しばかりの幼さが残る、もうすっかり聞き慣れてしまった声。だがそこに、いつもの無邪気さは見られない。
 「あの……大丈夫ですか」
 　かたわらにはリコが立っていた。塩気を含んだ南風が、きれいな黒髪をさらさらと持ち上げる。まだ一度も水に濡れていないワンピースの水着と、すっかり溶けてしまったふたつのかき氷。
 　惨めな泣き顔は見られたくなかった。希海は涙を拭いながら顔を背ける。ちらりと<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ったリコの背後には、太陽に照らされた白い砂浜が見えた。光を反射してきらきらと輝く砂粒と、どこまでも続いているかのような青い空。ついさっきまで希海もあの場所にいたというのに、今ではまるで別世界のように喧騒が遠く聞こえる。
@@ -138,7 +139,7 @@
 　だが、リコはどれほどこの日を待ちわびていたことだろう。
 　そのことを一番よく知っているのは、他ならぬ希海だった。水着を選ぶのに2時間も掛かった。てるてる坊主の作り方を教えてやった。海が見えるたびに楽しそうにはしゃいでみせたリコ。あの笑顔を思い出すと、帰ろうなんてとても言い出せなかった。
 「今日はもう……」
-「帰りましょう」
+「――帰りましょう」
 　柔らかな声に先回りをされた。
 　希海はこぼれる涙も忘れて、声の方を振り返る。そこに佇んでいたのは、目を細めて笑うひとりのロボット。いつもの無邪気な表情とは違う、凪いだ水面のように穏やかなあの笑顔だ。
 「今日は沢山遊んで疲れちゃいました。だからもう、帰りましょう」
