--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -15,15 +15,15 @@
 <div class="text">
 　その日はあっという間に訪れた。最初の5日で行く場所を決め、次の5日で段取りを組んだ。その次の5日で買い物を終えると、最後の1日は心を踊らせて待つだけだった。
 「わぁ！　見てください希海さん！　海ですよ海！」
-　列車がトンネルを抜け、太陽の光がボックスシートに差し込む。ガラスに張り付いたリコは、眼前の光景に目を輝かせていた。
+　<ruby>特急列車<rp>(</rp><rt>インターシティ</rt><rp>)</rp></ruby>がトンネルを抜け、太陽の光がボックスシートに差し込む。もうさっきから窓ガラスに張り付いたままの少女が、眼前の光景に目を輝かせた。電車が<ruby>海名<rp>(</rp><rt>かいめい</rt><rp>)</rp></ruby>駅でスイッチバックをしてからというものの、リコはずっとこの調子である。海が現れるたびに窓へ張り付いては、キャッキャと楽しそうに騒ぎ出す。
 「あんた、さっきから何回それ言ってるのよ」
-　希海は呆れ顔で手元の本から顔を上げる。電車が近畿市域を抜けてからというものの、リコはずっとこの調子だ。海が現れるたびに、キャッキャと楽しそうに窓へ張り付く。
+　希海は呆れ顔で手元の携帯ゲーム機から顔を上げた。
 「今度のはホントにすごいんですから。ほら希海さんも見てください」
 「はいはい分かった分かった……」
-　プレイを一時中断をしてゲーム機から顔を上げる。そこに広がるのは少し前と似たような景色――、そう思い込んでいた希海の目に飛び込んできたものは、記憶と大きく異なる海の姿だった。
+　プレイを一時中断をして顔を上げる。そこに広がるのは少し前と似たような景色――そう思い込んでいた希海の目に飛び込んできたものは、記憶と大きく異なる海の姿だった。
 「おおっ、ちょっと目を離してた隙に随分と色が変わったわねえ」
 「でしょ！　最初よりもずっと青が深いです」
-　淀みをしらない真っ青な海。海岸線を切り取る岬の緑色が、海の青をいっそう引き立てていた。日頃はお目にかかれない光景に、希海の気持ちも知らずと昂ぶってくる。
+　淀むことを知らない透明な海。海岸線を切り取る岬の緑色が、海の青をいっそう引き立てていた。日頃はお目にかかれない光景に、希海の気持ちも知らずと昂ぶってくる。
 「晴れて良かったわね」
 「はいっ。天気予報が曇りだったから、ちょっと心配してました」
 　いや、ちょっとどころではなかったはずだ。テレビの画面を埋め尽くす雲や傘のマークと、今にも泣き出さんばかりのリコの顔。一時は日程の変更も考えたが、変更した先の日が晴れである保証もなく、どうせ毎日休みなのだから、トライ・アンド・エラーで雨が止んだ日に出掛けようと思っていた。
@@ -31,7 +31,7 @@
 　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩1体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時7体に及んでいた。
 「ふふっ、そうかも知れませんね。でも希海さんの――」
 　不意にスピーカーから電子音が鳴り響く。和音のない、簡素で古臭いメーデー歌。鉄道省特有の到着予告チャイムである。
-『本日は、日本国有鉄道をご利用いただきましてありがとうございます。まもなく』
+『本日も、共和国鉄道をご利用いただきましてありがとうございます。まもなく<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>、<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>です』
 　聞き取りやすい滑らかな女性の声。10年ほど前から一般的になった合成音声だ。
 「あ、そろそろみたいよ。荷物下ろそ？」
 　アナウンスを聞くやいなや、希海は背伸びをして網棚のショルダーバッグに両手を伸ばした。肩紐を引っ張ると重心の支えを失ったバッグが、希海の体にずしりとのしかかってくる。
@@ -40,6 +40,25 @@
 「あっ、代わりますよ」
 「いや、まだ大丈夫……だと思う。しんどくなったら代わってもらうから、そのときはよろしくね」
 　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる微(かす)かな磯の香りが、否が応にも海の近さを実感させてくれた。
+「暑(あっつ)……」
+　肌を焼く強烈な日光に、一分と待たずして汗が吹き出てくる。
+「ところでさ」
+「はい？」
+「あんたって泳げるの」
+「どうなんでしょう。泳いだことないのでちょっと……」
+「いや、そういう意味もあるけどもっとこう本質的にさ……。水に浸かっても大丈夫なのかな～、って……」
+「え゛っ」
+「ショートしそうな気がすごくするんだけど」
+「…………」
+　それまで物珍しそうにあたりを見渡していたリコの顔がみるみると曇っていく。それはさながらに夏の空だ。ついさっきまで晴れていたというのに、希海の一言によって瞬く間に雨雲に覆われてしまう。
+　背後でインバータの磁励音。自分たちが乗ってきた電車が動き出したようだ。機関車とそれに繋がれたカーキ色の客車がゆっくりと動き出し、ガタンゴトンという車輪の響きが蝉の鳴き声をかき消していく。
+「……なんてね」
+　あたりが静かになるのを見計らって、希海は意地悪そうに笑った。
+「大丈夫。ちゃんとマニュアルに書いてたから。『本製品は完全防水処理が施されています』って」
+「も、もう！　脅かさないでくださいよ！！」
+　まったくこの子は、と希海は苦笑する。自分の体のことに関して何一つとして知らないリコが少しだけおかしかった。
+「あはは、ごめんごめん。じゃ、行こっか」
+
 　目指す海水浴場はここから4kmほど先である。駅前で客待ちをしていたタクシーに乗り込んで10分も車に揺られると、さびれた田舎の街並みが次第にリゾート地のそれに変貌していく。
 「うわぁ！　だんだん人が増えてきましたね！」
 「……ああうん、そうね」
@@ -55,7 +74,7 @@
 「あっ……、ああ、違います。従姉妹(いとこ)です」
 「ああ、そうですか。いや、随分と仲がいいなと思いまして。もう学校は夏休みですか？」
 「えっと、夏休みはまだだったと思います」
-　何だか嫌味を言われた気がした希海だったが、おそらくリコのことだろう。世間はまだ夏休みシーズン一歩手前である。人ごみを避けるためにあえてこの時期を選んだのだが、確かに、中学生らしき少女が平日に遊んでいるというのはいささか不自然に見えるのかもしれない。
+　何だか嫌味を言われた気がした希海だったが、おそらくリコのことだろう。世間はまだ夏休みシーズン一歩手前である。人ごみを避けるためにあえてこの時期を選んだのだが、確かに、中学生らしき少女が平日に遊んでいるというのはいささか不自然に見えるのかもしれない。だがそんなことは織り込み済みである。
 「実はこの子、体が悪くてちょっと前まで入院してたんです。最近、先生から家に帰って良いって言われたんですけど、まだ学校に通うのは少し難しいみたいで……」
 　希海はあらかじめ決めていた返答を口にした。ちなみに、リコが入院していたのは希海も通っている真浜大学の付属病院であり、一緒の部屋で暮らしている理由は、いざという時すぐに病院へ駆け込めるから……という設定だ。
 「はあ、それはまた大変ですねえ」
@@ -67,9 +86,8 @@
 　嘘を付くときだけ急に饒舌になる自分が少し嫌だった。
 （まあでも……何かあってからじゃ遅いしね）
 　前回のメンテナンス時に東から聞いた話が脳裏をよぎる。
-　なんでも誘拐されたアンドロイドの行く末は、大きく分けて3通りあるそうな。東曰く、『大吉を引く程度に運が良ければ、転売の末に新しい主人のもとで第二の人生を送ることになる』、『中吉や小吉だと、ピンクの床屋で春を売ることになる』、『凶だとスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られる』。いささか杞憂かも知れないが、事が起こってからでは遅いのだ。
-　そうこうしている内にタクシーは目的の海水浴場に到着する。
-　運賃の支払いを済ませてドアを開けると一層強い海の香りがした。
+　なんでもヒューマノイドが凶悪犯罪に巻き込まれる確率は、通常の人間の約10倍にも上るらしい。その中でも一番多いのが誘拐であり、確か『大吉を引く程度に運が良ければ転売の末に新しい主人のもとで第二の人生を送ることになり、中吉や小吉なら改造を施された上でピンクネオンの床屋で春を売ることになる。そして凶ならスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られることになる』……だとか。そう、何かあってからでは遅いのだ。
+　しばし車窓の景色を眺めていると、タクシーは目的の海水浴場に到着した。運賃の支払いを済ませてドアを開けると一層強い海の香りが漂ってくる。
 「それじゃあ、楽しんでいってくださいね」
 　運転手はそう言って車を発進させると細い路地に入り込み、元来た方向へと帰っていった。おそらく駅前で再び客を待つのだろう。エンジン音が行楽地の喧騒にかき消されていく。
 「さて、と……」
