--- a/hardproblem/2-06.html
+++ b/hardproblem/2-06.html
@@ -18,21 +18,21 @@
 　今、何時だろう。枕元に置かれた時計のセグメントは22時を示している。家に着いたのがたしか18時前。帰ってからすぐに寝てしまったので、4時間ほど寝ていた計算になる。
 　そういえばリコの姿が見当たらない。いつもなら「あっ、起きました？」と早々に声を掛けてくるというのに。どこか買い物へ出掛けているのだろうか。そう思って、部屋を見渡してみるとさっきまでリモコンが置いてあった机の上に、小さなメモ書きを見つけた。
 
-　希海さんへ。
-　北地区センターへ買いものに行ってきます。
-　22時ごろ戻ります。
+『<span class="simplified">希海</span>さんへ。
+　<span class="simplified">北地区</span>センターへ<span class="simplified">买</span>いものに<span class="simplified">行</span>ってきます。
+　22<span class="simplified">时</span>ごろ<span class="simplified">戻</span>ります』
 
 　案の定買い物だったようだ。22時ごろに帰ると書いてあるので、もうそろそろ戻ってくる頃だろう。
 「ん……？」
-　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ライリー量 子 精 神 理 学 入 門<rp>(</rp><rt>Introduction to Quantum Orgonomics</rt><rp>)</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
-　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>(</rp><rt>いかめ</rt><rp>)</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものといっても過言ではない。
+　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『ライリー<ruby>量　子　精　神　力　学　入　門<rp>(</rp><rt>Introduction　to　Quantum　Orgomechanics</rt><rp>)</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
+　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>(</rp><rt>いかめ</rt><rp>)</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものと言っても過言ではない。
 　魔導書、もとい教科書を片手に持つと、希海はそのまま右手を突き出して呪文でも唱えるふりをしてみる。とは言ってもオカルトチックな呪文など知らないのでゲームに登場する攻撃魔法で代用するのだが。
 　がちゃり、と鍵の開く音。
 　どうやらリコが帰ってきたらしい。希海は慌てて教科書を閉じると、さも何もしていなかったかのように扉が開くのを見計らって声を掛けた。
 「お、おかえり」
 「希海さん。起きてたんですか？」
 「うん。いまさっき起きたとこだけどね。ところでこの本……」
-　玄関で靴を脱ぐリコの方に表紙を向け、片手に持っていた教科書を掲げる。希海が出したのでなければリコに違いない。眠っている間に泥棒にでも入られたのなら話は別だが。
+　玄関で靴を脱ぐリコの方に表紙を向け、持っていた教科書を掲げる。希海が出したのでなければリコに違いない。眠っている間に泥棒にでも入られたのなら話は別だが。
 「あっ……す、すいません。希海さんが寝てる間に本棚で見つけて」
 「いや、別にいいんだけどさ。あんた、こんなの理解できるの？」
 「えへへ、ちょっと読んでみたんですけどね。やっぱり、ちんぷんかんぷんでした。あ、お弁当買ってきたんで今から温めますね」
@@ -46,17 +46,17 @@
 　そう言ってリコは希海が机の上に置いた教科書を開いてみせる。
 「いやいや、私もほとんど読んでないわよ」
 「でも、少しは読んだんですよね。それだけでもすごいですよ。見たこともない文字とかいっぱい出てきて、まるで外国語みたい」
-　紙面の上へ嬉しそうに視線を滑らせるリコ。たしかに、この手の教科書には、普通に生活していればまずお目にかかることがないような記号がたくさん出てくる。
+　紙面の上で嬉しそうに視線を滑らせるリコ。たしかに、この手の教科書には、普通に生活していればまずお目にかかることがないような記号がたくさん出てくる。
 「このフォークみたいな字は何ですか？」
 　リコが教科書の一文を指さして言った。フォーク？　一体何のことを言っているのだろう。皆目見当もつかない表現だ。疑問を抱えながら教科書を覗き込んだ希海は、「なるほどフォークか」と納得する。
-「ああ、これは<ruby>Ψ<rp>(</rp><rt>プサイ</rt><rp>)</rp></ruby>っていうギリシャ文字よ。状態ベクトルを表す記号」
+「ああ、これは<ruby><span class="times">Ψ</span><rp>(</rp><rt>プサイ</rt><rp>)</rp></ruby>っていうギリシャ文字よ。波動関数を表す記号」
 「このくるくるしてるのは？」
 「ハミルトニアン。系のエネルギーを表す演算子で、くるくるしてるのはHの花文字ね」
 「この十字架は？」
 「十字架じゃなくて<ruby>短剣符<rp>(</rp><rt>ダガー</rt><rp>)</rp></ruby>。<ruby>転置複素<rp>(</rp><rt>エルミート</rt><rp>)</rp></ruby>共役って意味よ」
 「……ぜんぜんわかんないです」
 「大丈夫、私もよくわかってないから」
-　しばらくの間、リコと一緒に教科書をじっと眺めていた。まるで呪文のように映る難解な数式と解説文たち。講義でやったときは『なんとなく』程度に理解していたが、今となっては単なる模様にしか見えない。この1年で大幅に劣化してしまった自分の知力をまざまざと実感させられた気がした。
+　しばらくの間、リコと一緒に教科書をじっと眺めていた。まるで呪文のように映る難解な数式と解説文たち。講義でやったときは『なんとなく』程度に理解していたが、今となっては単なる模様にしか見えない。この一年で大幅に劣化してしまった自分の知力をまざまざと実感させられた気がした。
 「頑張って勉強すれば、私にも読めるようになるんでしょうか……」
 　どうだろうか。なれる、と断言してやりたいところだが、正直なところは希海にも分からない。誰にだって向き不向きがあるのだ。でも、本を眺めるリコの目はいつになく真剣で、その眼差しを見ていると分からないなんて弱気な答えはできなかった。
 「もしよかったらさ、教えてあげようか？」
