--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -40,7 +40,7 @@
 「あっ、代わりますよ」
 「いや、まだ大丈夫……だと思う。しんどくなったら代わってもらうから、そのときはよろしくね」
 　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる微(かす)かな磯の香りが、否が応にも海の近さを実感させてくれた。
-「暑(あっつ)……」
+「<ruby>暑<rp>(</rp><rt>あっつ</rt><rp>)</rp></ruby>……」
 　肌を焼く強烈な日光に、一分と待たずして汗が吹き出てくる。
 「ところでさ」
 「はい？」
