--- a/hardproblem/2-06.html
+++ b/hardproblem/2-06.html
@@ -24,7 +24,7 @@
 
 　案の定買い物だったようだ。22時ごろに帰ると書いてあるので、もうそろそろ戻ってくる頃だろう。
 「ん……？」
-　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『ライリー<ruby>量　子　精　神　力　学　入　門<rp>(</rp><rt>Introduction　to　Quantum　Orgomechanics</rt><rp>)</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
+　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ラ イ リ ー 量 子 精 神 力 学 入 門<rp>(</rp><rt>Riley Introduction to Quantum Orgomechanics</rt><rp>)</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
 　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>(</rp><rt>いかめ</rt><rp>)</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものと言っても過言ではない。
 　魔導書、もとい教科書を片手に持つと、希海はそのまま右手を突き出して呪文でも唱えるふりをしてみる。とは言ってもオカルトチックな呪文など知らないのでゲームに登場する攻撃魔法で代用するのだが。
 　がちゃり、と鍵の開く音。
