細かい修正

--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -57,7 +57,7 @@
 「う゛っ……」
 　現在、リコが作れる料理のレパートリーは非常に数が少ない。朝はスクランブルエッグと目玉焼きのみ。昼夕はチャーハン・カレー・パスタと他にいくつか、と言ったところだ。リコの方もそれは重々承知しているのか、肩をすくめて申し訳なさそうにしている。
 「だ、だって……。希海さんから教えてもらったレシピって、これくらいしかないんですもん……」
-　希海の家に来たときのリコは何一つ料理ができない状況だった。かつてのリコは料理もそこそこに出来たようなので、おそらく記憶と一緒に覚えたレシピもどこかへ飛んでしまったのだろう。今現在リコが覚えているレシピはすべて希海が教えたものである。
+　希海の家に来たときのリコは何一つ料理ができない状況だった。かつてのリコは料理もそこそこに出来たようなので、おそらく記憶と一緒に覚えたレシピもどこかへ飛んでしまったのだろう。今現在リコが作れる料理はすべて希海が教えたものである。
 （結局、私に返ってくるのか……）
 　希海はひとつため息をついた。リコの拙さは自らの拙さの裏返しだ。
 「……ごめんなさい」
