--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -20,7 +20,7 @@
 　希海は呆れ顔で手元の携帯ゲーム機から顔を上げた。
 「今度のはホントにすごいんですから。ほら希海さんも見てください」
 「はいはい分かった分かった……」
-　プレイを一時中断をして顔を上げる。そこに広がるのは少し前と似たような景色――そう思い込んでいた希海の目に飛び込んできたものは、記憶と大きく異なる海の姿だった。
+　プレイを一時中断をして窓の外に目を向ける。そこに広がるのは少し前と似たような景色――そう思い込んでいた希海の目に飛び込んできたものは、記憶と大きく異なる海の姿だった。
 「おおっ、ちょっと目を離してた隙に随分と色が変わったわねえ」
 「でしょ！　最初よりもずっと青が深いです」
 　淀むことを知らない透明な海。海岸線を切り取る岬の緑色が、海の青をいっそう引き立てていた。日頃はお目にかかれない光景に、希海の気持ちも知らずと昂ぶってくる。
@@ -28,7 +28,7 @@
 「はいっ。天気予報が曇りだったから、ちょっと心配してました」
 　いや、ちょっとどころではなかったはずだ。テレビの画面を埋め尽くす雲や傘のマークと、今にも泣き出さんばかりのリコの顔。一時は日程の変更も考えたが、変更した先の日が晴れである保証もなく、どうせ毎日休みなのだから、トライ・アンド・エラーで雨が止んだ日に出掛けようと思っていた。
 「ほら、アレが効いたのよ。あんたが必死で作ってたやつ」
-　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩1体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時7体に及んでいた。
+　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩1体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時点で7体に及んでいた。
 「ふふっ、そうかも知れませんね。でも希海さんの――」
 　不意にスピーカーから電子音が鳴り響く。和音のない、簡素で古臭いメーデー歌。鉄道省特有の到着予告チャイムである。
 『本日も、共和国鉄道をご利用いただきましてありがとうございます。まもなく<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>、<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>です』
@@ -58,7 +58,6 @@
 「も、もう！　脅かさないでくださいよ！！」
 　まったくこの子は、と希海は苦笑する。自分の体のことに関して何一つとして知らないリコが少しだけおかしかった。
 「あはは、ごめんごめん。じゃ、行こっか」
-
 　目指す海水浴場はここから4kmほど先である。駅前で客待ちをしていたタクシーに乗り込んで10分も車に揺られると、さびれた田舎の街並みが次第にリゾート地のそれに変貌していく。
 「うわぁ！　だんだん人が増えてきましたね！」
 「……ああうん、そうね」
