--- a/hardproblem/2-05.html
+++ b/hardproblem/2-05.html
@@ -61,7 +61,7 @@
 「ふふっ、良かった。希海さん、やっと笑ってくれました」
 　特急列車の車内にふたりの笑い声が小さく響いた。窓の外には結局辿りつけなかった海が青く輝いて見える。
 　いつかまた、リコと一緒にここへ来よう。
-　そう思った。馬鹿な自分のことだ。やるやる、と言っときながら、どうせ出来ないかもしれない。出来ないかもしれないけれど、絶対にまたこの場所へリコを連れてこよう。
+　そう思った。馬鹿な自分のことだ。やる、と言っておきながらどうせ出来ないかもしれない。出来ないかもしれないけれど、絶対にまたこの場所へリコを連れてこよう。
 「ありがと……リコ」
 　希海の涙が、太陽を反射してきらりと輝いた。
 　まぶたが驚くほどに重い。無理もない。あれだけ泣いたのだ。この目の充血はちょっとやそっとじゃ治らないだろう。こんな顔で街を歩けば、さぞかし変な目で見られるに違いない。
