--- a/hardproblem/2-06.html
+++ b/hardproblem/2-06.html
@@ -16,7 +16,7 @@
 　目が覚めると窓の外は真っ暗になっていた。
 　重い体に鞭打ってベッドから這い出ると、希海は手探りで電灯のリモコンを探した。なぜか机の上に置かれていたリモコンを手に取り、スイッチを入れる。電圧を印加されたダイオードからまばゆい光が放たれ、闇に閉ざされていた部屋がその姿を現した。
 　今、何時だろう。枕元に置かれた時計のセグメントは22時を示している。家に着いたのがたしか18時前。帰ってからすぐに寝てしまったので、4時間ほど寝ていた計算になる。
-　そういえばリコの姿が見当たらない。いつもなら「あっ、起きました？」と早々に声を掛けてくるというのに。どこか買い物へ出掛けているのだろうか。そう思って、部屋を見渡してみるとさっきまでリモコンが置いてあった机の上に、小さなメモ書きを見つけた。
+　そういえばリコの姿が見当たらない。いつもなら『あっ、起きました？』と早々に声を掛けてくるというのに。どこか買い物へ出掛けているのだろうか。そう思って、部屋を見渡してみるとさっきまでリモコンが置いてあった机の上に、小さなメモ書きを見つけた。
 
 『<span class="simplified">希海</span>さんへ。
 　<span class="simplified">北地区</span>センターへ<span class="simplified">买</span>いものに<span class="simplified">行</span>ってきます。
