エロ差分追加

--- a/picture/nozomi08_.html
+++ b/picture/nozomi08_.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>nozomi08</title>
+  <title>nozomi08_</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,15 +14,11 @@
   </div>
   
   <div class="image">
-    <a href="nozomi08_.html"><img src="image/nozomi08.png" alt=""></a>
-  </div>
-  
-  <div class="picturetitle">
-    <a href="../hardproblem/">希海</a>
+    <a href="nozomi08__.html"><img src="image/nozomi08_.png" alt=""></a>
   </div>
   
   <div class="caption">
-    希海ちゃん15さい
+    魔が差した
   </div>
 
   <div class="back">
