--- a/hardproblem/3-01.html
+++ b/hardproblem/3-01.html
@@ -27,10 +27,10 @@
 　希海が荷台を支える手を離すと悲鳴がいっそう大きくなった。リコの乗った自転車は、三輪車かと見紛うばかりのスピードでふらふらと蛇行をはじめる。周囲には人影がちらほらといたが、ここ解放記念公園のグラウンドは広大なので誰かとぶつかってしまう心配もない。周辺の施設といえば解放軍の駐屯地と労働党の真浜支部くらいであって、平日のこの時間帯にはほとんど人がいないのだ。希海の大学が近いのが唯一の懸念事項であるが、頭上はこの曇天。いつ一雨来てもおかしくないこの天気なら、いつぞやみたいに知り合いにばったりと出くわすこともないだろう。そう安心できるほどに、希海たちの周囲には人がいなかった。
 「おおーっ。なかなかいい感じよ。その調子その調子！」
 　おぼつかない様子で自転車のハンドルを右へ左へと動かす少女の姿を微笑ましく見守る希海。ふたりが今日、ここへやってきたのは他でもない、新しく買った自転車の練習のためだ。今までは買い物だろうが何だろうが徒歩で済ませてきた希海だったが、最近は何から何までリコにまかせっきりである。自分が何もしていない申し訳なさも手伝って、少しでも日々の雑務が楽になるようにとつい先日、リコに自転車を買ってやったのだ。
-　リコの乗った自転車が危なっかしく方向を変えた。練習を始めてから今日で5日目。相変わらずきゃあきゃあとうるさいが、最初こそ自転車にまたがることすら怖がっていたが徐々に自転車に慣れ始めているようである。希海はしばらくリコを見守った後、タバコをくわえて火を付けると、その場に腰を降ろした。
+　リコの乗った自転車が危なっかしく方向を変えた。練習を始めてから今日で5日目。相変わらずきゃあきゃあとうるさいが、最初はサドルにまたがることすら怖がっていたリコも徐々に自転車に慣れ始めているようである。希海はしばらくその様子を見守った後、タバコをくわえて火を付けると、適当な場所を見繕って地面に腰を降ろした。
 「私も、そろそろ頑張らないとな……」
 　つぶやいた言葉は、湿った風に流されてどこかへと消えてしまう。
-　もう時間がないというのに、希海には自分が大学へ行く姿がまったく想像できなかった。ぬるま湯のような弛緩した日常に思考力を奪われているのだろう。希海の大学では2回連続での留年は認められていないのだ。すでに1年間を無為に過ごしてしまった希海に残された時間はあと半年。卒業か退学か。泣いても笑っても半年後には現実を突きつけられる羽目になるというのに、今の希海にはどうしてもその実感が持てずにいた。
+　もう時間がないというのに、希海には自分が大学へ行く姿がまったく想像できなかった。ぬるま湯のような弛緩した日常に思考力を奪われているのだろう。希海の大学では2年連続での留年は認められていないのだ。すでに1年間を無為に過ごしてしまった希海に残された時間はあと半年。卒業か退学か。泣いても笑っても半年後には現実を突きつけられる羽目になるというのに、今の希海にはどうしてもその実感が持てずにいた。
 　タバコの煙が渦を巻いて空へと吸い込まれていく。紫煙が立ち昇る先にあるのは一面灰色の雲。白でも黒でも、快晴でも雨天でもない。何もかもを先送りにしつづけている希海の現状そのものだった。
 「あ」
 　遠くでガシャンという音。少し目を離した間にリコが転倒してしまっていた。希海はタバコを携帯灰皿にねじ込むと、慌てて自転車のそばへと駆け寄る。よほど変なこけ方をしたのか、リコは自転車の下敷きになってしまっていた。
@@ -44,12 +44,12 @@
 　ついにきたか。恨めしそうな視線で見上げた曇天。そんな希海の頬に、さらに一滴、二滴と雫が落ちてくる。
 「雨……ですか？」
 「そうみたい。そろそろ引き上げよっか」
-　リコが不安そうに見つめてくるが、希海は慌てない。雨が降ることはもとより織り込み済みだ。つい先程立てたばかりのスタンドを蹴って外し、颯爽と自転車にまたがる。サドルが少し低い気がするが、この場合むしろ好都合。希海はブレーキレバーを握って感触を確かめると、得意げな顔でリコを振り返る。
+　リコが不安そうに見つめてくるが、希海は慌てない。雨が降ることはもとより織り込み済みだ。つい先程立てたばかりのスタンドを蹴って外し、颯爽と自転車にまたがる。サドルが少し低い気がするが、この場合は重心が低くなってむしろ好都合。希海はブレーキレバーを握って感触を確かめると、得意げな顔でリコを振り返る。
 「じゃあ後ろ乗って」
 　リコが固まった。
 「え……。えっと、後ろっていうのは……」
 「何言ってんのよ。荷台に決まってんじゃない。さっさと帰らないと本格的に降ってくるわよ。台風近づいてるらしいし」
-　希海は視線で自転車の荷台を指して促すが、リコは微動だにしない。どうやら先程派手に転んでしまったことがあってか、ふたり乗りに恐怖感を抱いているようだった。希海があれこれ説得しても、リコ一向に首を縦に振ろうとはせず、雨粒がその大きさを増していき無視できないほどになっても、まだリコは自転車の後ろに乗ることを承諾しようとはしなかった。
+　自転車の荷台を指して<ruby>促<rp>(</rp><rt>うなが</rt><rp>)</rp></ruby>すもリコは微動だにしない。どうやら先程派手に転んでしまったことがあってか、ふたり乗りに恐怖感を抱いているようだった。希海があれこれ説得しても、リコ一向に首を縦に振ろうとはせず、雨粒がその大きさを増していき無視できないほどになっても、まだリコは自転車の後ろに乗ることを承諾しようとはしなかった。
 　そして希海が折れた。
 　折れたというより、悠長に話をしていたら雨が本格的に降りだしてしまい、リコを説得する理由がなくなってしまったという方が正しいのだが。
 「か、帰ってこれた……」
@@ -78,7 +78,7 @@
 「はい」
 「お風呂入る」
 　こんなこともあろうかと、希海は家を出る前に風呂を沸かしていた。元々は公園で遊んだ汗を流すためであって、まさか汗どころか雨でずぶ濡れになるとは思いもよらなかったが、その話は置いておこう。
-　風呂場へと向かった希海は、濡れたシャツを乱暴に脱ぎ捨てる。布地が体に貼り付き時間がかかってしまったが、ブラジャーを外し洗濯カゴにパンツを放り投げる頃には、ちょうど良い具合にエアコンが効きはじめてきた。
+　風呂場へと向かった希海は、濡れたシャツを乱暴に脱ぎ捨てる。布地が体に貼り付き時間がかかってしまったが、ブラジャーを外し洗濯カゴにパンツを放り投げる頃には、ちょうど良い具合に体の火照りが治まりはじめていた。
 （ああもう）
 　今日は散々だった。洗面台の上の切れかけた蛍光灯を眺めながら希海は思う。せっかく今までいい感じで練習が進んでいたというのに、今日の一件でリコが自転車から遠ざかってしまったらどうしよう。リコが自転車に乗れるようになった暁には、ふたりでどこか遠くへサイクリングにでも行こうと考えていたのだが、この調子だとそれは随分と先の話になりそうである。
 　おまけにこの雨。
@@ -108,7 +108,7 @@
 　シャワーチェアに座ったリコは、タオルで前を隠しながら恥ずかしそうに浴室の隅に視線を落としている。
 「まあでも、今日はしっかりと洗っとかいないとね。覚えてる？　明日は定期メンテの日。色々と汚れてたらリコだって恥ずかしいでしょ」
 「私は人間と違って、お風呂に入らなくても汚れませんよ」
-「派手にこけたし、その後雨に濡れたじゃない。そのまま乾かすと雑菌が繁殖してくさ〜くなっちゃうわよ、多分」
+「派手にこけたし、そのあと雨に濡れたじゃない。そのまま乾かすと雑菌が繁殖してくさ〜くなっちゃうわよ、多分」
 「わ、分かりました。洗います。洗いますけど……」
 　リコは伏目がちにちらりと横を伺う。その視線の先には両の肘を湯船の縁に乗せた希海の姿があった。
 「あんまり見られると恥ずかしいです」
