--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -13,8 +13,8 @@
 
   <div class="contents">
 <div class="text">
-　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>(</rp><rt>メトロ</rt><rp>)</rp></ruby>と<ruby>郊鉄<rp>(</rp><rt>K C R</rt><rp>)</rp></ruby>を乗り継ぎ、SDRのサポートセンターへと足を運ぶことにした。
-　最寄りである郊鉄の暮葉街道駅からサポートセンターまでは、いくらか歩かねばならない。普段の天候なら多少面倒くさい思いをするだけですむ距離なのだが、この日は台風である。強風の中、傘を斜めに差して歩くふたりの間に会話はなかった。
+　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>(</rp><rt>メトロ</rt><rp>)</rp></ruby>と<ruby>郊鉄<rp>(</rp><rt>KCR</rt><rp>)</rp></ruby>を乗り継ぎ、SDRのサポートセンターへと足を運ぶことにした。
+　最寄りである郊鉄の<ruby>暮葉<rp>(</rp><rt>くれは</rt><rp>)</rp></ruby>駅からサポートセンターまでは、いくらか歩かねばならない。普段の天候なら多少面倒くさい思いをするだけですむ距離なのだが、この日は台風である。強風の中、傘を斜めに差して歩くふたりの間に会話はなかった。
 （今日もまた濡れるのか……）
 　傘を用意してきたとは言え、台風の前では焼け石に水である。強風によって斜めに運ばれる雨が、希海のデニムをみるみると湿らせていく。この調子だと帰る頃にはずぶ濡れだろう。昨日みたいに、帰ってすぐ熱い風呂に飛び込もう。そう決意した希海の脳裏に、つい先日の出来事が蘇ってきた。
 　湯気で白く煙る浴室と、ほっそりとしたリコの肢体。悪ふざけで体をまさぐり、足を開けさせた先にあったものを見て希海は我が目を疑った。
@@ -33,14 +33,14 @@
 「入らないんですか？」
 　雨音の響きが混ざった、リコの声。
 　気付けばサービスセンターの入り口まで来ていた。手元に目をやると、棒立ちのまま閉じた傘を握っている自分に気が付く。ご丁寧に紐まで留めてあるというのに、傘を閉じたときのことを希海はまったく覚えていなかった。
-「ああ、ごめん。ぼーっとしてた。じゃあ入ろっか。せっかく台風の中来たんだしね」
+「ああ、ごめん。ぼーっとしてた。じゃあ入ろっか。せっかく台風のなか来たんだしね」
 　空調保持のための二重ドアをくぐり、入り口にいた女性に来訪の目的を告げる。女性は手元の書類を確認すると、ふたりをレストルームに通してくれた。ここまではいつもの光景である。だが、この日に限っては普段と少し違う雰囲気があたりに漂っていた。
 　事業所内がやけに慌ただしい。ひっきりなしに聞こえる喋り声。携帯電話を片手に廊下を走るスーツ姿の従業員とツナギを着た作業員。時折やけにラフな格好をしている人の姿も見かけるが、おそらく研究員か何かだろう。
 「やあ、よく来てくれたね」
 　希海がガラス越しの廊下に視線をやっていると、反対側から東がやってきた。
 「こんにちは、東さん」
 「あ、どうも」
-　希海とリコは口々に挨拶をする。普段ならここでリコと別れて、あとはメンテナンスが終わるのを読書なり、散歩なりしながら待つだけだ。その為の本だって持ってきたのだが、東は少し申し訳なさそうに視線を逸らす。
+　希海とリコは口々に挨拶をする。普段ならここでリコと別れて、あとはメンテナンスが終わるのを読書なり、散歩なりしながら待つだけだ。その為の本だって持ってきたのだが、東は少し申し訳なさそうに視線を逸らすと、
 「せっかく来てくれたところ申し訳ないんだが……今日はちょっとしたトラブルが起こっていてね。しばらく待っていてもらうことになると思う」
 「トラブル……ですか？　確かに何だか慌ただしいですけど」
 「ああ、ウチでサポートしている子にちょっとしたことが起こってね」
@@ -54,7 +54,7 @@
 「ああ、すまん。そういう事なんで、もうしばらく待っていてくれないか。また時間を見つけてこっちに来るから……もしもし」
 　東はスーツの内ポケットから携帯電話を取り出すと、そのままどこかへ行ってしまった。扉を閉める音がレストルームに反響すると、周囲が一気に静かになる。遠くに聞こえる所内の喧騒、廊下を走る足音。空調機とドリンクサーバーの低いうなり声。
 　何かの間違いでは？
-　周囲の環境が奏でる静かな音色が鼓膜を優しく撫でる。希海には東の話がにわかには信じられなかった。そもそもニューロワームとは人の精神に巣食う情報生物ではなかったか。ニューロワームの本体はオルゴン場の振幅であり、オルゴンとは生物が有する特有の力場――生気のようなものだったはずだ。無機物であるロボットがそれに感染するなんて聞いたことがないし、そもそもどういう原理で――
+　周囲の環境が奏でる静かな音色が鼓膜を優しく撫でる。希海には東の話がにわかには信じられなかった。そもそもニューロワームとは人の精神に巣食う情報生物ではなかったか。ニューロワームの本体はオルゴン場の振幅であり、オルゴンとは高度に結節した神経節が有する特有の力場――生気のようなものだったはずだ。無機物であるロボットがそれに感染するなんて聞いたことがないし、そもそもどういう原理で――
 「ニューロワームって何ですか？」
 　それまで周りをきょろきょろと見回していたリコが口を開いた。
 「え、あ、ああそっか。あんたそういうのも知らないのか」
@@ -72,12 +72,12 @@
 「病原体……細菌とかですか？」
 「そう。ただ細菌との違いは、実体が無いっていこと。細菌は元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌をはじめとする微生物と同じ。代謝・自己複製・境界という生物の3要件もしっかりと満たしてるわ」
 「なんだかコンピュータウィルスみたいですね」
-「ご名答。実際にニューロワームっていう名前は、コンピュータウィルスのワームから採られてるのよ。<ruby>神経細胞<rp>(</rp><rt>ニューロン</rt><rp>)</rp></ruby>に寄生するワームってとこね」　
+「ご名答。実際にニューロワームっていう名前は、マルウェアのワームから採られてるのよ。<ruby>神経細胞<rp>(</rp><rt>ニューロン</rt><rp>)</rp></ruby>に寄生するワームってとこね」
 「ふふっ。さすが希海さん、色んなこと知ってますね」
 「ま、まあ、一応専門だし……」
-　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、部分占有型ニューロワームの宿主共生おける突然変異だとか、強磁場中における配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
+　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、スボトニック型ニューロワームの宿主共生おける突然変異だとか、強磁場中におけるヤング配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
 「じゃあ、そのニューロワームに感染した人は、どうなるんですか？」
-「色々よ。認知能力に障害が出たり、頭がおかしくなっちゃったり。でも一番多いのは閉律症ね。精神が外界から隔絶されて、眠ったままになっちゃうの。これが全体の……えーっと、95%くらいだったかな。ちょっとうろ覚え」
+「色々よ。認知能力に障害が出たり、頭がおかしくなっちゃったり。でもほとんどは閉律症ね。精神が外界から隔絶されて、眠ったままになっちゃうの。これが全体の……えーっと、98%くらいだったかな。ちょっとうろ覚え」
 「眠ったまま？　起きないんですか？」
 「そ。たまに自分から起きるケースもあるみたいだけど、稀ね」
 「なんだか……おとぎ話みたいですね」
@@ -90,7 +90,7 @@
 「患者の頭に“潜って”直接引っ張りだすのよ」
 「え……。えっとそれは……」
 　希海の言ったことがよく理解できないのだろう。リコは眉間に皺を寄せた。無理もない。現実的で泥臭い作業だが、表面だけを切り取れば、それはまるで映画か何かだ。
-　現在行われている閉律症の治療は精神医学用語で『ルーミング』、法律用語で『特定精神医療』と呼ばれている。その内容を一言で表せば、『患者の脳と作業者の脳を接続し、患者の精神空間に入り込んで直接連れ戻す』というものだ。連れ戻しが<ruby>滞<rp>(</rp><rt>とどこお</rt><rp>)</rp></ruby>りなく進行するか、一悶着起こるのかは患者による。『帰りましょう』と言って素直に応じる患者もいれば、『ここから出たくない』とごねる者だって少なくない。そして呼びかけに応じない患者は、もっぱら作業者による力ずくで連れ戻されることになっていた。
+　現在行われている閉律症の治療は精神医学用語でルーミング、法律用語で特定精神医療と呼ばれている。その内容を一言で表せば、『患者の脳と作業者の脳を接続し、患者の精神空間に入り込んで直接連れ戻す』というものだ。連れ戻しが<ruby>滞<rp>(</rp><rt>とどこお</rt><rp>)</rp></ruby>りなく進行するか、一悶着起こるのかは患者による。『帰りましょう』と言って素直に応じる患者もいれば、『ここから出たくない』とごねる者だって少なくない。そして呼びかけに応じない患者は、もっぱら作業者による力ずくで連れ戻されることになっていた。
 　不意に<ruby>蝶番<rp>(</rp><rt>ちょうつがい</rt><rp>)</rp></ruby>の軋む音がした。レストルームに満ちていた静寂が破られる。
 　希海とリコが音の方を振り返ると、そこにはよく知った男の姿があった。東はふたりの姿を確認すると、そのまま小走りでこちらへと駆け寄ってくる。
 「待たせてばかりですまんね。それでメンテナンスの方なんだが……まだまだ時間が掛かりそうだ。せっかく来てもらったところを申し訳ないが、今日は一旦帰った方がいいだろう」　
