--- a/hardproblem/3-04.html
+++ b/hardproblem/3-04.html
@@ -13,7 +13,7 @@
 
   <div class="contents">
 <div class="text">
-　どことも知れぬ街を小春とともに歩いた。
+　どことも知れぬ街を小春と歩いた。
 　郊外の住宅地など、どこも同じような風景。そう思っていた希海だったが、ゆっくりと歩いてみると物珍しい光景がいくつも目に留まる。看板に描かれた変なキャラクター。用途のよく分からない奇抜な形の建物。驚くくらいに狭い路地と、その脇を走る細い水路。
 「でね、青山さん。ここの家にすっごく人懐っこい猫がいるんですけど……」
 　ここは小春の家の近所が元になって作られている場所らしい。目に留まった風景のひとつひとつを丁寧に説明していく内に、小春はすっかり元気を取り戻してくれたように見えた。
@@ -41,7 +41,7 @@
 　甘い味は数秒のあいだ口の中にとどまつづけ、現れた時と同じように突如として消えていく。ここではない、外の世界からやってきた知覚。ルーミング終了30分前を告げるシグナルだ。
 「……もう時間ですか？」
 「うん……あともう少しかな」
-　寂しそうな声が漏れる。小春と一緒に街を歩くのは相当に楽しかった。初め些細な争いをしてしまったものの、一度打ち解けてしまえば、そのあとは時間も忘れていろいろな話ができたと思う。
+　寂しそうな声が漏れる。小春と一緒に街を歩くのは相当に楽しかった。初めこそ些細な争いをしてしまったものの、一度打ち解けてしまえば、そのあとは時間も忘れていろいろな話ができたと思う。
 「小春くんは……やっぱりここに残るの？」
 　小春は答えない。希海から目を逸らし、眼前の夕日を眺めるその姿には迷いの色が浮かんでいる気がした。
 「私もさ、昔好きな人がいたの」
@@ -85,10 +85,10 @@
 　失恋が閉律症発症の原因だとするSDRの調書が間違いならば、一体どうして小春はワームに感染してしまったのだろう。
 　前日に女の子と会ったという話と、その後落ち込んでいたと言う話は確かなはずだ。オーナーの証言がある。SDRはそこに告白という推測を加えたことによって誤った結論を導きだしてしまったのであって、彼女と会った日に何かしらのアクシデントが起こったという点は、正しいのではないだろうか。
 「……その子と何かあったの？」
-　小春が言いにくそうに下を向いた。無理もない。ここから先は、心の奥の柔らかい部分に触れる話だ。本人が話したくないというのなら、触れずいてやるのが優しさなのかもしれない。
+　小春が言いにくそうに下を向いた。無理もない。ここから先は、心の奥の柔らかい部分に触れる話だ。本人が話したくないというのなら、触れずにいてやるのが優しさなのかもしれない。
 　沈黙がふたりの間に重くのしかかり、希海を襲う気まずさが時々刻々とその大きを増していく。
 　希海は歯を食いしばった。話したくなければ、話さなくていい。沈黙が重たければそう言って話題を変えることもできる。けれど、アスファルトの地面にへたり込む少年の姿を思い出すと、帰りたくないと涙を流す小春の姿を思い出すと、その場を取り繕うことがどうしてもできなかった。
-　小春の抱えている問題は、言いにくいことなのかもしれない。聞いたって希海なんかにはどうにもならないことかもしれない。でもひょっとしたら……。ひょっとしたら小春を悩ませる問題は、希海にだって何とかできることなのかもしれない。希海だけじゃない。事情を話せばリコだってきっと協力してくれる。それで駄目なら東に話を持ちかけたっていい。
+　小春の抱えている問題は、言いにくいことなのかもしれない。聞いたって希海なんかにはどうにもならないことかもしれない。でもひょっとしたら……。ひょっとしたら小春を悩ませる問題は、希海にだって何とかできることなのかもしれない。希海だけじゃない。事情を話せばリコだってきっと協力してくれる。それで駄目なら東に話を持ちかけたっていい。だから――――
 「……すいません」
 　足元を見つめたままの小春が、申し訳なさそうに謝罪を述べた。その言葉が、これ以上の追求を打ち切るものだということは明らかだ。
 　希海は一抹の無力感に襲われる。考えてみれば当たり前のことだった。知り合って一時間ほどしか経っていない人間に、ワームに感染するほどの大きな悩みを打ち明けるなんてあるはずがない。希海が小春の立場だったとしても同じように口を<ruby>噤<rp>(</rp><rt>つぐ</rt><rp>)</rp></ruby>んだはずだ。
@@ -108,7 +108,7 @@
 　きっかけ。
 　もしも人がきっかけで変わるとするならば、希海はいつ変われるのだろう。そのきっかけは、いつやってくるのだろう。好きな人に出会えたとき？　たまたま朝早く起きれたとき？　学期の変わり目？　夏のビーチで知人に出くわしたとき？　ひょっとすると希海が気付かなかっただけで、みんな、とうの昔に過ぎ去ってしまっているのではないだろうか。
 「きっかけ……か。ま、いつか私のもとにも来てくれることを期待しとこうかな」
-　そんな疑念を振り払うかのように、飄々としたそぶりを見せる希海。せっかく小春が前向きになっているというのに、つまらない考えで水をさしてはいけない。卑屈な考えは、卑屈なこころに閉じ込めておくのが吉だ。
+　そんな疑念を振り払うかのように、飄々としたそぶりを見せる希海。せっかく小春が前向きになっているというのに、つまらない考えで水をさしてはいけない。卑屈な考えは、卑屈な心に閉じ込めておくのが吉だ。
 「じゃあそろそろ時間もないから、さっさと終わらせちゃおっか。最後にもう一度聞くけど……本当にいいのね？」
 「もう、せっかく決心したのに揺さぶらないでくださいよ」
 「あははっ、ごめんごめん」
@@ -123,7 +123,7 @@
 「しかと見よっ！　私の必殺技っ！」
 　小春に向かって勢いよく投げた。
 　はたからその様子を見ても、ただ石を投げただけのように思えるだろう。何の変哲もない単なる投石だ。
-　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>(</rp><rt>ラ イ ナ ッ ク</rt><rp>)</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
+　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>(</rp><rt>ライナック</rt><rp>)</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
 　鉄板を叩いたときのような固く鋭い轟音。
 　地球儀が砕け散った。
 　その破片はまるで雫のように透明で、夕日に照らされミラーボールのようにキラキラと輝いている。
