--- a/hardproblem/3-06.html
+++ b/hardproblem/3-06.html
@@ -16,9 +16,9 @@
 　煮え切らない思いで吸うタバコは不味かった。
 　希海は雨上がりの夜空に向かって煙を吐き出す。昨日から降り続いていた雨は希海たちが家へ帰る頃にはすっかりと止み、雲間からは大きな月がぽっかりと顔をのぞかせていた。
 　雨上がりの夜は冷える。地表の放射冷却を遮る雲も、大地を温める太陽もそこにはない。どこまでも黒い夜空に浮かんだ月だけが、このベランダから見える唯一の天体だ。
-　タバコを根本まで吸いきった希海は、吸殻を足元の空きビン投げ入れる。もう何年も前に設置した灰皿だ。部屋でタバコを吸うと大家に怒られるし、最近はリコもうるさい。
+　タバコを根本まで吸いきった希海は、吸殻を足元の空きビン投げ入れる。もう何年も前に設置した灰皿だ。部屋でタバコを吸うと管理人に怒られるし、最近はリコもうるさい。
 　窓を開けて自室に戻った。
-　ベランダから見えた街の光よりもずっと明るい白色電灯の光が希海を包み込む。時刻は夜の22時。風呂も夕飯もすでに済ませてある。
+　ベランダから見えた街の光よりもずっと明るい白色ダイオードの光が希海を包み込む。時刻は夜の22時。風呂も夕飯もすでに済ませてある。
 「……」
 　部屋の中央に置かれたテーブルの前には、静かに数学の問題を解くリコの姿があった。
 「この問題がよく分かんないんですけど……」
@@ -26,7 +26,7 @@
 「どれ？」
 「これです。ある楕円が与えられているときに、それに接する傾きが5の直線を求めなさい、っていう」
 「ああ、これね。えっとこの問題は……」
-　リコの隣に腰掛け、ペンを片手に問題の解き方を説明していく。そんな希海の姿をリコは頷きながら聞いていた。
+　隣に腰掛けペンを片手に問題の解き方を説明していく。そんな希海の姿をリコは頷きながら聞いていた。
 「というわけ。分かった？」
 「ここの式はどうやって解けばいいんですか？」
 　リコは身を乗り出し解説の一部を指さした。ほんの一瞬、肩が触れ、その温かさに希海はぎくりとする。
@@ -86,7 +86,7 @@
 　ごん、という大きな音。
 　筆記具が散らばり、コーヒーカップが床に叩きつけられた。視界が真っ暗になり、少し遅れて後頭部に鈍い衝撃が走る。頭をテーブルの角にぶつけてしまったらしい。希海は頭を抱えてその場にうずくまる。　
 「だ、大丈夫ですか」
-　こぼれたコーヒーがぽたぽたと雫の音を立て、部屋に芳ばしい香りが広がる。慌てて顔を上げると、心配そうに希海の方を見つめるリコと目があった。
+　こぼれたコーヒーがぽたぽたと雫となって音を立て、部屋に芳ばしい香りが広がる。慌てて顔を上げるとそこには心配そうにこちらを見つめるリコ。
 「あ……」
 　自分は一体何をやっているのだ？
 　気でも狂ったか？
