--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -19,7 +19,7 @@
 　一筋の風が駆け抜け、袖口を通り抜ける空気の冷たさに希海は身震いした。着の身着のままに部屋を飛び出してきたために、上半身を覆うものは下着を除いてTシャツ1枚という有様だ。長袖であるのがせめてもの救いだが、それでもこの気温の中を徘徊するには心もとない。
 「へっくし！」
 　希海は大きなくしゃみをして鼻をすすった。
-　あれからどれくらい歩いただろうか。感覚としてはかれこれ2時間以上歩いたつもりなのだが、おそらく実際には1時間も経っていないのだろう。夜のニュータウンには本当に何もないからだ。建築制限のために商業施設はほとんど存在せず、唯一の例外である近隣センターは20時に早々とシャッターを降ろしてしまう。ときおり車のエンジン音が響くだけの、静まり返った住宅街。希海はそんな夜の街をあてもなく歩き回り、気づけば“あの場所”に辿り着いていた。
+　あれからどれくらい歩いただろうか。感覚としてはかれこれ2時間以上歩いたつもりなのだが、おそらく実際には1時間も経っていないのだろう。夜のニュータウンには本当に何もないからだ。建築制限のために商業施設はほとんど存在せず、唯一の例外である近隣センターは20時に早々とシャッターを降ろしてしまう。ときおり車のエンジン音が響くだけの、静まり返った住宅街。鮮新台をさまよい、中新台をあてもなく歩き、そして気づけば“あの場所”に辿り着いていた。
 　希海は半ば自嘲気味に、おどり場へと腰を降ろす。段差が高く、間隔は歩幅と合わず、段のひとつひとつが微妙に傾斜している階段の、そのおどり場。あのときリコが立っていた場所だ。考えもせず適当に歩いていたというのに、この階段へ戻ってきてしまったのは何の因果だろう。ここから希海のアパートへはほど近い。秋の夜風に参ってさっさと帰りたいという気持ちの現れか、それとも自分のしてしまったことに対する無意識的な何かか。
 「…………」
 　自分のしてしまったこと。
@@ -32,7 +32,7 @@
 　希海は大きくため息を付いて、ポケットを探りだす。
 　タバコでも吸おうと思った。こんなときはタバコでも吸うものだ。一本吸って気合を入れたら、戻ってリコに謝ろう。そう思った。
 　だがいくらポケットを探っても目的の物は一向に見つからない。
-「あ……」
+「あ」
 　そして希海は思い当たる。そういえば、タバコを部屋に忘れてきてしまった。考えてみれば当然である。あの後、上着も着ずに部屋を飛び出してしまったのだ。上着すら着る余裕がなかったというのに、タバコを持ってくる余裕などあろうはずがなかった。
 　仕方がない。
 　希海が探すのを諦めようとしたそのとき
@@ -86,13 +86,6 @@
 「だから“これ”もきっと、そのためにあるんです。私達が人間を理解するために。人間の心を理解するために……。誰が授けてくれたものなんです」
 　さながら乳飲み子を慈しむ母親のようだった。
 　そんな少女の姿が言いようのないほどに美しく見えて、冷たい夜風がふたりの間を駆け抜けるまでの間、希海はしばらく何も言えずにリコの横顔をただひたすらに眺めていた。
-
-　その後のことについて少しだけ記しておこう。
-　小春のその後についてだ。
-　ずっと後にSDRを訪れた際、東から聞いたところによると、小春は宣言通り自らの悩みを打ち明けてみたのだとか。もともと店の手伝いとして購入された小春がそんな風に思い詰めていたとはオーナーにとっても予想外だったようで、話をしてみると案外すんなりと受け入れられらしい。そして、それまで店の経営一筋だったオーナーも以降はちょくちょくと小春と共に旅行へいくようになったそうである。
-　そして東は懐から一枚の写真を取り出して希海に渡してみせた。そこ写っていたのはヨーロッパらしき見知らぬ町並みと、笑顔を浮かべてカメラに視線をやる小春。隣には見知らぬ少女の姿もあった。
-『ぜひ青山さんに見せてください』
-　旅先からのメールには、そんなリクエストが付いていたのだとか。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
