--- a/hardproblem/3-03.html
+++ b/hardproblem/3-03.html
@@ -14,8 +14,8 @@
   <div class="contents">
 <div class="text">
 　SDR近畿事業所の敷地内。
-　サポートセンターのある建物から5分ほど歩いた別棟の1Fに、横幅10m奥行き20mほどの部屋がある。壁や天井には吸音・吸光仕様の黒く毛羽立ったフェルトが床や壁に敷き詰められており、窓の類は一切存在しない。ただ、天井のフェルト穴から覗く照明だけが、部屋を照らす唯一の光源だった。
-　パジャマに着替えた希海は、財布の中から取り出した一枚のカードをまじまじと眺める。カードの上部には『特定精神医療従事者免許証』の文字。電球色の柔らかな光が、カードにプリントされた顔写真をぼんやりと浮かび上がらせていた。
+　サポートセンターのある建物から少し離れた別棟の1Fに、横幅10m奥行き20mほどの部屋がある。壁や天井には吸音・吸光仕様の黒く毛羽立ったフェルトが床や壁に敷き詰められており、窓の類は一切存在しない。ただ、天井のフェルト穴から覗く照明だけが、部屋を照らす唯一の光源だった。
+　パジャマに着替えた希海は、財布の中から取り出した一枚のカードをまじまじと眺める。カードの上部には『<span class="simplified">特定精神医疗从事者免许证</span>』の文字。電球色の柔らかな光が、カードにプリントされた顔写真をぼんやりと浮かび上がらせていた。
 　目の下のクマ。卑屈さと尊大さが織り交ざった気難しそうな顔つき。小さい頃からのくせっ毛。カーキ色の制服と真紅の腕章。
 　ため息とともにカードを財布にしまう。この写真を撮ったのは、最後に免許の更新をした高3の頃だったか。服装こそ学校の制服だが、顔つきや髪型・髪の色、化粧のやり方すら当時から何一つ進歩していない。むしろ知識や精神面での退化を考えると、確実に駄目な大人にになっているとすら言えた。
 「青山さん。着替えは終わりましたか？」
@@ -33,7 +33,7 @@
 　今度こそ素っ頓狂な声が出た。
 「え、えーっとそれは、『恋を失う』と書くあの……」
 「はい、その失恋です」
-　希海が受けた説明によると、オーナーは古守区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとアンドロイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
+　希海が受けた説明によると、オーナーは<ruby>千霧<rp>(</rp><rt>ちぎり</rt><rp>)</rp></ruby>区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとアンドロイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
 　女の子が来るたびに、小春は嬉しそうに彼女と話をした。彼女が店に訪れたときの小春の喜び方は尋常ではなく、仕事そっちのけで女の子と会話をしていることも多々あったそうである。最初のうちは細かく注意していたオーナーだったが、女の子と楽しそうに話す小春の表情にピンときたらしく、最近では女の子が来ると自分が店番をしていたという。
 「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と合ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第4世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
 　男は目を伏せ小さく息を落とす。
@@ -53,7 +53,7 @@
 　そう。ルーミングマシンがただ機能のみを追求したものであるならば、その無表情にもまた必然的な理由があると言えた。
 　希海はベッドに腰掛けると、マシン横のフックに掛けられていた“筒”を手に取る。高さは中指の長さくらい、厚さは希海の手首くらい、内径は人間の顔より少し小さいくらいの筒状をしたパーツだ。外面からは幾本ものケーブルが伸びており、その全てがルーミングマシンに接続されている。
 　端に付いていた突起を指で押すと、筒が2つに分かれた。希海は慣れた手付きで自らの首に、その筒をはめ込む。突起を押しながらパーツを合わせるとカチッという音とともに再び筒は1つになり、ちょうど首輪のような具合で希海の喉元を覆った。
-　この筒の正体は『ゲートネックレス』と呼ばれる神経信号の読み取り装置である。枕元に置かれているヘッドギアと併せて中枢神経系を駆け巡るオルゴンのシグナルを読み取り、その情報を選別してルーミングマシンに転送するという代物だ。壁を隔てた隣の部屋では患者が同じ物を装着しており、希海の神経信号が患者の脳へ、患者の神経信号が希海の脳へと伝えられる仕組みである。ヘッドギアを装着し、暗幕を閉め、部屋の電気を消せば準備は完了だ。後は薬が効くのをベッドに寝転がってただ待っていればよい。
+　この筒の正体は『ネック<ruby>SQUID<rp>(</rp><rt>スクイド</rt><rp>)</rp></ruby>』と呼ばれるジョセフソン効果を利用した神経信号の読み取り装置である。枕元に置かれているヘッドSQUIDと併せて中枢神経系を駆け巡るニューロンの発火やオルゴン場の波数分布をマッピングし、その信号を選別してルーミングマシンに転送するという代物だ。壁を隔てた隣の部屋では患者が同じ物を装着しており、希海の神経信号が患者の脳へ、患者の神経信号が希海の脳へと伝えられる仕組みである。ヘッドSQUIDを装着し、暗幕を閉め、部屋の電気を消せば準備は完了だ。後は薬が効くのをベッドに寝転がってただ待っていればよい。
 　電気を消すと、周囲にはノイズ以外の何も見えなくなる。物音もしない。聞こえるのは心臓の鼓動と耳鳴り、そして息が喉を切る音だけ。壁一面に貼られた吸音・吸光材のせいだ。外界からの刺激はルーミングの妨げになるため、作業者の居る空間は音や光が極力少なくなるように設計されている。ルーミングマシンが“無表情”であるのも、こういった理由からだ。
 　10分ほど経つと、希海の体から次第に感覚が消失しはじめた。足や手が痺れ、皮膚の感覚が失われていく。麻酔薬が効きはじめたらしい。視覚や聴覚だけでなく、触覚・嗅覚・味覚・平衡感覚や体感覚などもルーミングの妨げになりうる。希海が服用した麻酔もこれらの感覚の多くを麻痺させる複合的な薬剤だ。
 　それから更に10分が経った。時計でも眺めていればこの10分という時間の経過は明白なのだが、この段になると、もはや希海の意識からは時間の感覚というものが抜け落ちていた。夢か<ruby>現<rp>(</rp><rt>うつつ</rt><rp>)</rp></ruby>かも分からぬ<ruby>微睡<rp>(</rp><rt>まどろ</rt><rp>)</rp></ruby>みの中を、微小とも無限とも思える時間をかけて往来する。　
@@ -85,7 +85,7 @@
 　カーキ色の人民服と人民帽。左腕に巻かれた真っ赤な腕章と、そこに記された校名。セーラー服の区立に可愛くないと馬鹿にされ、ブレザーの私立からダサいと見下されてなお、意固地なまでにその革命精神を曲げようとしない、党立高校の進歩的制服である。
 　人民服を着てルーミングをするのが常だった高校時代の名残だろう。習慣というのは怖ろしいものだと希海は思う。高校を卒業して既に4年が経っているというのに、まさかこんな格好でこっちに入ってきてしまうとは。
 「…………はぁ」
-　せっかく久しぶりのルーミングが上手くいって上機嫌だったというのに、一気に憂鬱な気分になってしまった。もういっそのこと、このまま帰ってしまおうか。さすがに実行はしないものの、そんな考えすら浮かんでくる始末である。
+　せっかく久しぶりのルーミングが上手くいって上機嫌だったというのに、一気に憂鬱な気分になってしまった。もういっそのこと、このまま帰ってしまおうか。そんな考えすら浮かんでくる始末である。
 　希海はそっと目を閉じた。
 　精神空間から中途離脱する方法は簡単だ。目を閉じ、自らの身体に意識を集中させればよい。そうすれば体感覚と世界との間に違和感が生じ、その違和感を大きくしていくことで“夢から覚める”ことができる。
 　希海は自らの体に意識を向けた。足の先、指の先、膝や腕、腹部、胸部と末端から知覚を研ぎ澄ましていく。まさか本当に離脱をしようとしていたわけではない。数秒後にはおもむろに目を開け、『なーんてね』と独り言を呟いて辺りを散策し始めるつもりだった。
@@ -146,7 +146,7 @@
 （やばっ！　これ無理！）
 　だが、まだ足りない。下向きに踏ん張っているせいで、最初にそうしたように跳んで避けることもできそうにない。かくなる上はもう一つの石を捨てなければ。
 　希海は地面に向けている力のうち150を住宅の石垣に向けると同時に、持ちっぱなしだった石を反対方向へと投げた。民家の壁に石が激突し、窓ガラスが音を立てて砕け散る。
-　これで1000本の矢のすべてが使える。間に合うか。希海は550を上空の岩に、450を地面に向ける。花崗岩相手なら一本の矢が出せる力は約10<ruby> N <rp>(</rp><rt>ニュートン</rt><rp>)</rp></ruby>弱。つまり約100kgの負荷が身体にのしかかる計算だ。だが、もはや構ってはいられない。少しでも多くの力を加え、1秒でも早く岩を止める必要があった。
+　これで1000本の矢のすべてが使える。間に合うか。希海は550を上空の岩に、450を地面に向ける。花崗岩相手なら一本の矢が出せる力は約10<ruby>N<rp>(</rp><rt>ニュートン</rt><rp>)</rp></ruby>弱。つまり約100kgの負荷が身体にのしかかる計算だ。だが、もはや構ってはいられない。少しでも多くの力を加え、1秒でも早く岩を止める必要があった。
 　岩は希海のすぐ頭上。もう腕一本分の距離もない。無理だ。間に合わない。そんなことを考える余裕もなく岩はあっという間に落下し、アスファルトの地面に叩きつけられる直前で、
 　止まった。
 　岩が砕ける音も、頭蓋が潰れる音もない。
