小説→ライトなノベル

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <table class="top">
     <tbody>
       <tr>
-        <td><a href="novel.html">小説</a></td>
+        <td><a href="novel.html">ライトなノベル</a></td>
         <td><a href="picture.html">ヘタレ絵</a></td>
       </tr>
       <tr>
