§4-4および4-5追加

--- a/hardproblem/4-05.html
+++ b/hardproblem/4-05.html
@@ -13,6 +13,25 @@
 
   <div class="contents">
 <div class="text">
+　ここに一人の少女がいる。
+　しんしんと降りしきる雪の公園でたった一人膝を抱え、ただひたすらにすべてから目を逸らすように<ruby>眼<rp>(</rp><rt>まなこ</rt><rp>)</rp></ruby>を伏せた少女が。
+（ああ、あんたは……）
+　希海はこの少女を世界で一番よく知っていた。年の頃は15。負けん気の強そうな顔つきは毎朝鏡で見る顔とまったく変わっておらず、当時背中まで伸ばしていたくせっ毛はまだ黒いまま。
+　彼女は8年前の自分だった。中学校でいじめられ、閉律症を患ってしまったかつての自分。そして見覚えのあるこの場所は希海の精神空間だ。七号公園に似た風景も、<ruby>主<rp>(</rp><rt>あるじ</rt><rp>)</rp></ruby>を埋め尽くさん勢いで降りしきる雪も、すべてが昨日のことのように思い出すことができた。そう、あれは確か中学3年生の12月。例年より雪が多かった冬の、どうしようもない1ヶ月間の出来事だ。
+　その頃の希海には仲の良かった親友がいた。中学校に入学してすぐに話しかけてくれて、それ以来3年間ずっと同じクラスだった大の仲良し。そんな子が、ある日いじめの被害者になってしまった。いや、『なってしまった』という言い方は幾分保身的であるのかもしれない。実際には『なっていた』だ。希海が知るずっと前からそのようなことは行われていたらしいし、夏頃を境にいつも笑顔だった親友がため息を付くことが多くなったのを記憶している。
+　そして、いじめの事実を知ったとき希海は黙っていなかった。友人を問いただしていじめの首謀者達を突き止め、その内の一人に掴みかかった。元からそういうのが嫌いな性格ももちろんあったが、何より大切な友達が辛い目にあっていたことを気付けなかった自分に苛立っていたのかもしれない。その後先生に呼ばれてこっぴどく叱られたものの、ともあれこれで親友を苛んでいたいじめは鳴りを潜めて一件落着……とはならなかった。
+　集団というものは常に贄を欲している。
+　どこかでいじめが止むことは、別のどこかで新たないじめが発生することと同義であり、そしてその新たな贄とは希海自身に他ならなかった。上履きを隠されたり、机に落書きをされたり。その内容はとても幼稚なものだったが、当時の自分にはそれだけでも十分に堪えるものだったことは間違いない。まして、それまで仲が良かった親友がそれに加わりだしたとなれば。
+　希海の心は日に日に追い詰められ、学校を休みがちになった。そしてある日、悔しさで枕を濡らしながら眠りについた後、気づけばこの場所に来ていたのだ。
+（ひょっとして……）
+　私はまたこの場所へ戻ってきてしまったのだろうか？
+　いや、その答えは否だ。もし希海が閉律症を患ってしまったのなら、この目の前の少女の存在は一体何なのだ。それに<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>は？　今ここに立っている自分の肩口には何も見えないばかりか、肝心の<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>はその主を守るかのように、膝を抱えうずくまる少女の周りを悲しそうに漂っている。形は両の手に乗るくらいの金属の箱。希海が昔持っていたオルゴールである。箱の上では小さな<ruby>人形<rp>(</rp><rt>ひとがた</rt><rp>)</rp></ruby>をした装飾が、音楽に合わせてくるくると踊っていた。
+　ああ、そうだ。
+　希海は思い出す。いつからか思うようになっていたこと。自分の中にあまりにも深く根ざしすぎて、いつの間にかその始まりを忘れてしまっていたこと。
+　――機械になりたい
+　このとき、はじめてそう思ったのだった。
+　機械ならば怖いなんて思わない。筋の通らないいじめなんて気にせず毎日ちゃんと学校へ行ける。親友の裏切りも『仕方ないさ』と笑って許せる。心臓を引き裂くような辛いことも、まぶたを腫らす悲しいことも、機械にならばみんな忘れられる。
+　しんしんと降りしきる雪。すべての熱を奪い去り、すべての心すらも覆い隠すような静寂があたりを包み込む。機械になりたいって、思った。いまでもそう思ってる。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
